FIX: Align of Importer-> WordPress (#36742)

--- a/client/my-sites/importer/author-mapping-item.scss
+++ b/client/my-sites/importer/author-mapping-item.scss
@@ -1,11 +1,19 @@
 .importer__author-mapping {
-	height: 58px;
+	padding: 8px 0 16px;
+	height: auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
 
 	.author-selector__author-toggle {
-		width: 45%;
 		padding-top: 4px;
 		margin-right: -7px;
 		float: right;
+	}
+
+	& > span {
+		width: 45%;
 	}
 
 	div.user {
@@ -14,9 +22,7 @@
 }
 
 .importer__source-author {
-	width: 45%;
-	padding-top: 7px;
-	float: left;
+	padding-top: 0;
 	display: inline-block;
 	color: var( --color-neutral-70 );
 	text-align: left;
